--- a/index.qmd
+++ b/index.qmd
@@ -1,20 +1,13 @@
 ---
-title: "karimyiqbal"
+title: "Home"
+format: html
 ---
 
 ## Karim Iqbal
 
-This is my GitHub website. Please see assignments and research project and share your valued feedback at kxi220002(at)utdallas.edu
+Even after doing things I end up paying for something
 
-### Research Paper
-
-\[Research Paperl\](pdfs/goodland_finalproject.pdf)
-
-### Research Proposal
-
-\[Research Proposal\](pdfs/goodland_researchproposal.pdf)
-
-### Assignments
+## **EPPS 6302 - Assignments**
 
 **Assignment 1**
 
@@ -46,11 +39,11 @@ Intervals
 
 The intervals between peaks are irregular, but the most notable peaks align with important political events, such as elections. The data shows seasonal trends with higher search interest around the time of elections and significant political events.
 
-![](images/Assignment2.jpg){width="406"}
+![](images/Assignment2.jpg)
 
 Use gtrendsR package to do a. (use gtrendsR01.R program)
 
-![](images/Assignment2%20gtrendsR-01.jpg){width="372"}
+![](images/Assignment2%20gtrendsR-01.jpg)
 
 What are the differences between the two methods?
 
@@ -70,9 +63,9 @@ a\. Biden-Xi summit data
 
 Quanteda package tokenized the tweets, created a document-feature matrix, and applied Latent Semantic Analysis to uncover underlying patterns in the text data. It identified and analyzed the most frequent hashtags and user mentions, providing a network visualization of these elements. The provided dataset is a comprehensive collection of Twitter data focused on the summit between US President Biden and Chinese President Xi Jinping in November 2021. It features over 1,000 observations, each representing a Twitter post. These posts include direct tweets, quotes, and retweets related to articles discussing the two leaders. The data also contains user information, such as the names of the individuals tweeting.
 
-![](images/Assignment%203a.jpg){width="307"}
+![](images/Assignment%203a.jpg)
 
-![](images/Assignment3a1.png){width="368"}
+![](images/Assignment3a1.png){width="425"}
 
 b\. US presidential inaugural speeches
 
@@ -82,7 +75,7 @@ i\. Any similarities and differences over time and among presidents?
 
 The lexical dispersion analysis of U.S. presidential inaugural speeches from Eisenhower to Biden shows that the usage of "American" has become more frequent in recent administrations, suggesting a contemporary emphasis on national identity, while the term "people" consistently figures across speeches, underscoring a constant focus on democratic values.
 
-![](images/Assignment%203.jpg){width="399"}
+![](images/Assignment%203.jpg)
 
 The word "American" was seldom used in the past but saw a notable rise starting with Clinton's administration, indicating a shift in presidential rhetoric toward patriotism. Additionally, the term "communist" saw heightened usage during the Nixon and Reagan eras, aligning with the peak of the Red Scare, reflecting the socio-political concerns of the times.
 
@@ -90,13 +83,17 @@ The word "American" was seldom used in the past but saw a notable rise starting 
 
 Wordfish is a method used for analyzing texts in a one-dimensional framework, primarily focusing on how frequently words occur within documents. This technique is adept at assessing the positioning of documents on a singular axis, such as an ideological spectrum. By evaluating the usage frequency of specific words, Wordfish helps in organizing and interpreting data, as exemplified in the analysis of inaugural speech data.
 
+.
+
+**Assigment 4 (Not provided)**
+
 **Assignment 5**
 
 YouTube data
 
 1.  Run YouTubenews01.R. (prerequisites: YouTube developer API). Repeat the data collection of CNN's channel stats, video stats and comments.
 
-    Despite getting ClientID and ClientSecret, the script kept resulting in errors.
+    I tried running the code with ID and secret but didn't work.
 
 2.  Analyze the stats and comments
 
@@ -107,41 +104,39 @@ YouTube data
 Web scraping
 
 1.  Run textmining01.R, rvest01.R and rvest02.R.
-
 2.  Organize the data in data frames and run text analytics (e.g. Wordcloud)
 
-    ![](images/Rplot.png){width="228"}
+![MLK](images/Rplot.png)
 
-    MLK Speech
+![WC](images/Assignment%206%20Churchill.jpg)
 
-    ![](images/Assignment%206%20Churchill.jpg){width="320"}
+1.  Challenge: How to download multiple pdf/data files using webscraping methods?
 
-    Churchill speech
-
-3.  Challenge: How to download multiple pdf/data files using webscraping methods?
-
-    To download multiple PDF or data files using web scraping methods, we need to identify the URLs of the files we want to download. This is typically done using a web scraping library like rvest in R to parse the HTML of the webpage and extract the URLs. Once we have the URLs, we can use a function like download.file() in R, in combination with a loop, to programmatically download each file.
+To download multiple PDF or data files using web scraping methods, we need to identify the URLs of the files we want to download. This is typically done using a web scraping library like rvest in R to parse the HTML of the webpage and extract the URLs. Once we have the URLs, we can use a function like download.file() in R, in combination with a loop, to programmatically download each file.
 
 **Assignment 7**
 
 Government data and parallel processing
 
-1.  Run govdata01.R and parallel01.R. -- Task completed
-2.  Start planning for storage and computational resources: Note the space and time taken.
+1.       Run govdata01.R and parallel01.R. -- Task completed
 
-a\. Plan data management (e.g. database)
+2.       Start planning for storage and computational resources: Note the space and time taken.
+
+a.       Plan data management (e.g. database)
 
 It took 10.462103 minutes to get 234 records and the total size of PDFs downloaded was 106509630 bytes.
 
-3.  Organize the data in data frames -- Task completed.
+3.       Organize the data in data frames -- Task completed.
 
-4.  Learn other data storage methods (e.g. arrow, feather, parquet)
+4.       Learn other data storage methods (e.g. arrow, feather, parquet)
 
-    After learning about these storage methods, I found that for large, complex datasets, Parquet is often the best choice due to its efficiency in storage and speed in analytics queries. For smaller datasets or when high-speed input output is more critical, Feather is a good choice. If you need to share data between different programming languages or tools, Arrow provides a great platform due to its language-agnostic design.
+After learning about these storage methods, I found that for large, complex datasets, Parquet is often the best choice due to its efficiency in storage and speed in analytics queries. For smaller datasets or when high-speed input output is more critical, Feather is a good choice.
 
-**Assignment 8**
+If you need to share data between different programming languages or tools, Arrow provides a great platform due to its language-agnostic design.
 
-Census data and Spatial data
+Assignment 8
+
+**Census data and Spatial data**
 
 Read A Guide to Working with US Census Data in R - Task completed
 
@@ -151,28 +146,26 @@ Run spatialdata01.R and spatialdata02.R. - Task completed
 
 The script "spatialdata01.R" retrieves Census data concerning the median age for each U.S. state in 2019, utilizing the ggplot2 package for visualization. It then generates a thematic map displaying the variations in median age across different states in the U.S.
 
-![](images/8a.jpg){width="356"}
+![](images/8a.jpg)
 
 The script "spatialdata2" gathers and displays Census data regarding income in Texas, with a special focus on Dallas County for the year 2020. It employs a range of color intensities on the maps to represent various income levels in Texas and Dallas.
 
-![](images/8b.jpg){width="361"}
+![](images/8b.jpg)
 
-![](images/8c.jpg){width="358"}
+![](images/8c.jpg)
 
 Compare different years of data (e.g. 2010 and 2020)
 
 Year 2010
 
-![](images/8d.jpg){width="376"}
+![](images/8d.jpg)
 
-![](images/8e.jpg){width="398"}
+![](images/8e.jpg)
 
-![](images/8f.jpg){width="358"}
+![](images/8f.jpg)
 
 Year 2020
 
-![](images/8g.jpg){width="340"}
-
-Texas and Dallas income level graphs are already shared above in question 3.
+![](images/8g.jpg)
 
 In the Dallas area, there's a noticeable overall uptick in income, particularly in the neighborhoods to the north of downtown Dallas. While incomes were fairly uniform in 2010, especially in the southern regions, more pronounced income disparities have emerged by 2020. The median age reported in the Census has shown little variation, with a marginally reduced median.
